fix item list icon spacing

--- a/frontend/src/metabase/components/List.css
+++ b/frontend/src/metabase/components/List.css
@@ -90,10 +90,13 @@
 :local(.leftIcons) {
   composes: flex-no-shrink flex align-self-start mr2 from "style";
   composes: icons;
-  padding-top: 4px;
 }
 :local(.rightIcons) {
   composes: icons;
+}
+:local(.itemIcons) {
+  composes: leftIcons;
+  padding-top: 4px;
 }
 
 :local(.extraIcons) {
